# macarons

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
macarons/: cli.py  dataset.py  image_text.py
tests/: test_image_text.py
