[tool.poetry]
name = "macarons"
version = "0.1.0"
description = "A tool to generate image-text data"
authors = ["dinhanhx <dinhanhx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
webcolors = "^1.12"
dataclass-wizard = "^0.22.2"
jsonlines = "^3.1.0"
tqdm = "^4.65.0"
click = "^8.1.3"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
flake8 = "^6.0.0"
black = "^23.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
